module5-task2 done

--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-  <script src="js/pictures.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/gallery.js"></script>
+  <script src="js/setup-form.js.js"></script>
+  <script src="js/validate-form.js"></script>
 </body>
 </html>
