--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   <script src="js/utils.js"></script>
   <script src="js/data.js"></script>
   <script src="js/gallery.js"></script>
-  <script src="js/setup-form.js.js"></script>
+  <script src="js/setup-form.js"></script>
   <script src="js/validate-form.js"></script>
 </body>
 </html>
