--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
   <script src="js/backend.js"></script>
   <!-- <script src="js/data.js"></script> -->
   <script src="js/gallery.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/setup-form.js"></script>
   <script src="js/validate-form.js"></script>
 </body>
